implemmented checkin and checkout of user,qr code search and mnual admin user search
